--- a/tests/local-embed.html
+++ b/tests/local-embed.html
@@ -2,9 +2,9 @@
 
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Amstedam, Dam - YouTube^Home</title>
-    <link rel="stylesheet" href="local-embed.css">
+    <link rel="stylesheet" href="local-embed.css" />
   </head>
 
   <body>
@@ -12,6 +12,25 @@
     <div class="test-wrapper">
       <span id="clock" class="test-clock"></span>
     </div>
-    <iframe class="test-iframe" allowfullscreen src="https://www.youtube.com/embed/CeYIlky5e_w"></iframe>
+    <iframe
+      class="test-iframe"
+      id="player"
+      allowfullscreen
+      src="https://www.youtube.com/embed/CeYIlky5e_w?enablejsapi=1"
+    ></iframe>
+    <script src="https://www.youtube.com/iframe_api"></script>
+    <script>
+      let player;
+
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player("player", {
+          events: {
+            onReady() {
+              player.playVideo();
+            }
+          }
+        });
+      }
+    </script>
   </body>
 </html>
