--- a/tests/local-embed.html
+++ b/tests/local-embed.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Amstedam, Dam - YouTube^Home</title>
-    <link rel="stylesheet" href="local-embed.css" />
-  </head>
 
-  <body>
-    <h1 class="test-title">Amstedam, Dam - YouTube^Home</h1>
-    <div class="test-wrapper">
-      <span id="clock" class="test-clock"></span>
-    </div>
-    <iframe
-      class="test-iframe"
-      id="player"
-      allowfullscreen
-      src="https://www.youtube.com/embed/CeYIlky5e_w?enablejsapi=1"
-    ></iframe>
-    <script src="https://www.youtube.com/iframe_api"></script>
-    <script>
-      let player;
+<head>
+  <meta charset="utf-8">
 
-      function onYouTubeIframeAPIReady() {
-        player = new YT.Player("player", {
-          events: {
-            onReady() {
-              player.playVideo();
-            }
+  <title>Amstedam, Dam - YouTube^Home</title>
+
+  <link rel="stylesheet" href="local-embed.css">
+</head>
+
+<body>
+  <h1 class="test-title">Amstedam, Dam - YouTube^Home</h1>
+  <div class="test-wrapper">
+    <span id="clock" class="test-clock"></span>
+  </div>
+  <iframe
+    class="test-iframe"
+    id="player"
+    allowfullscreen
+    src="https://www.youtube.com/embed/CeYIlky5e_w?enablejsapi=1"
+  ></iframe>
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script>
+    let player;
+
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player("player", {
+        events: {
+          onReady() {
+            player.playVideo();
           }
-        });
-      }
-    </script>
-  </body>
+        }
+      });
+    }
+  </script>
+</body>
+
 </html>
