Modified the embedded video to be a live stream that's running by the time of this commit

--- a/tests/local-embed.html
+++ b/tests/local-embed.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<head>
+  <meta charset="utf-8"/>
 
-    <title>TechLinked - YouTube</title>
+  <title>Livestream - YouTube</title>
 
-    <link rel="stylesheet" href="local-embed.css" />
-  </head>
+  <link rel="stylesheet" href="local-embed.css"/>
+</head>
 
-  <body>
-    <h1 class="test-title">TechLinked - YouTube</h1>
-    <div class="test-wrapper">
-      <span id="clock" class="test-clock"></span>
-    </div>
-    <iframe
-      class="test-iframe"
-      src="https://www.youtube.com/embed/CeYIlky5e_w"
-      style="border: none;"
-      allow="autoplay"
-      allowfullscreen></iframe>
-  </body>
+<body>
+<h1 class="test-title">Livestream - YouTube</h1>
+<div class="test-wrapper">
+  <span id="clock" class="test-clock"></span>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pE9pKEAQkmE?si=ht0ivllAUGlIcXJ3&autoplay=1"
+        title="YouTube video player" style="border: none;"
+        class="test-iframe"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</body>
 </html>
